cmake_minimum_required(VERSION "3.10.0")
set(CMAKE_CXX_STANDARD 20)
project(test_cpp)
add_compile_options(-Wall -Werror -g3)
file(GLOB SRCS src/domain/*.cpp)
file(GLOB MODULE_REFS modules/reflect-cpp/src/*.cpp modules/reflect-cpp/src/*.c)
add_executable(${PROJECT_NAME} src/app/test_main.cpp ${SRCS} ${MODULE_REFS})
target_include_directories(${PROJECT_NAME} PUBLIC include)
target_include_directories(${PROJECT_NAME} PUBLIC ./modules/reflect-cpp/include/rfl/thirdparty)
target_include_directories(${PROJECT_NAME} PUBLIC ./modules/reflect-cpp/include)
target_link_libraries(${PROJECT_NAME} PUBLIC gtest gmock)
